# Surjo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md
admin/: CLAUDE.md  package.json  pnpm-lock.yaml
admin/src/: App.tsx
admin/src/components/: Button.tsx  Layout.tsx  Modal.tsx  ProtectedRoute.tsx  index.ts
admin/src/contexts/: AuthContext.tsx
admin/src/lib/: api.ts
admin/src/pages/: About.tsx  Home.tsx  Login.tsx
backend/: Cargo.toml
backend/migrations/: V1__initial_schema.sql
backend/src/: lib.rs  main.rs
backend/src/handlers/: auth.rs  hello.rs  mod.rs  users.rs
backend/src/models/: auth.rs  db.rs  mod.rs  user.rs
backend/tests/: integration_tests.rs
bruno-api/: Hello World.bru  bruno.json
bruno-api/Auth/: Google Auth.bru  Login.bru
bruno-api/Users/: Create User.bru  Get User.bru
bruno-api/environments/: Local.bru
webapp/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
webapp/src/: App.tsx
webapp/src/components/: Button.tsx  Card.tsx  Input.tsx  Layout.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: About.tsx  Home.tsx
webapp/src/types/: api.ts
