[package]
name = "surjo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Web framework
actix-web = "4.9"
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Environment variables
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client for OAuth
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Documentation
utoipa = { version = "5.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["actix-web"] }

# TypeScript type generation
ts-rs = { version = "10.0", features = ["chrono"] }

# System info for load data
sysinfo = "0.32"

[dev-dependencies]
actix-rt = "2.10"
